k8s/trading-agent-m/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trading-agent-m-deployment
  labels:
    app: trading-agent-m
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trading-agent-m
  template:
    metadata:
      labels:
        app: trading-agent-m
    spec:
      containers:
        - name: trading-agent-m
          image: joshdavidang/trading-agent-m:v1
          ports:
            - containerPort: 8080
