k8s/trading-agent-m/redis.yaml
# TODO: TO BE REMOVED?

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-trading-agent-m-stream
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-trading-agent-m-service
spec:
  selector:
    app: redis
  ports:
    - port: 6379
